@@ -1,3 +1,7 @@
+2003-02-18  Chris Toshok  <toshok@ximian.com>
+
+	* gui/e-meeting-model.c (cursor_cb): deal with ECard being opaque.
+
 2003-02-11  Hans Petter Jansson  <hpj@ximian.com>
 
 	Enable printing for calendar and tasks.
